@@ -10,6 +10,9 @@ CREATE TABLE AmbientValues(
        ONBOARD_TEMP INTEGER,
        PRESSURE INTEGER,
        BRIGHTNESS INTEGER,
+       CPU_TEMP INTEGER,
+       BMP180_TEMP INTEGER,
+       BMP180_PRES INTEGER,
        HUMINITY INTEGER);
 
 COMMIT;
