@@ -1,3 +1,3 @@
 #!/bin/sh
-[ -d /var/log/amtrack_pid ] || mkdir -p /var/log/amtrack_pid
-exec chpst -u root:ambient svlogd -t /var/log/amtrack_pid
+[ -d /var/log/amtrack ] || mkdir -p /var/log/amtrack
+exec chpst -u root:ambient svlogd -t /var/log/amtrack
