@@ -1,3 +1,3 @@
 #!/bin/sh
-[ -d /var/log/poweroff_daemon_pid ] || mkdir -p /var/log/poweroff_daemon_pid
-exec chpst -u root:ambient svlogd -t /var/log/poweroff_daemon_pid
+[ -d /var/log/poweroff_daemon ] || mkdir -p /var/log/poweroff_daemon
+exec chpst -u root:ambient svlogd -t /var/log/poweroff_daemon
