@@ -1,7 +1,7 @@
 Sensor handler (Sensor-Pi and BMP180)
 =====================================
 
-This is all content around the sensor handler.
+This is all content around the sensor handler. The daemon collects the data from the sensor-pi, the BMP180 and in addition the cpu temperature to correct the sensor-pi onboard values.
 
 [Background infos](../Documentation/knowledge_base.md).
 
@@ -18,9 +18,8 @@ The basic interface are make targets:
     | make distclean          -> clean and uninstall            |
     | make install            -> install bin to $(HOME)/bin     |
     | make uninstall          -> remove bin from $(HOME)/bin    |
+    | make deploy             -> install bin from /usr/bin      |
     +-----------------------------------------------------------+
-
-WARNING: This is work in progress! Don't expect things to be complete in any dimension.
 
 If you face a bug, then pls use https://github.com/tjohann/ambient_tracking_with_raspi/issues to create an ticket.
 
